<resources>
    <string name="app_name">Exam 2</string>
    <string name="second_name">Second Name:</string>
    <string name="first_name">First Name:</string>
    <string name="users">Users:</string>
    <string name="email">Email:</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="update">update</string>
    <string name="age">Age:</string>
    <string name="save">save</string>
    <string name="user">User:</string>
    <string name="update_users">Update users:</string>
</resources>