<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark">
    <ScrollView
        android:id="@+id/svUsers"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:maxHeight="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etFirstName"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_bias="0"
        android:background="@color/lightDark">

        <LinearLayout
            android:id="@+id/llUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:lines="1"
        android:textSize="16sp"
        android:hint="@string/first_name"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/svUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etSecondName"
        android:layout_margin="2dp"
        android:layout_marginTop="2dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:lines="1"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:hint="@string/second_name"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etAge"
        android:layout_margin="2dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:lines="1"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etSecondName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        android:layout_margin="2dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        android:layout_margin="2dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toTopOf="@id/btnRemove"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRemove"
        app:layout_constraintBottom_toBottomOf="@id/btnRemove"

        />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toEndOf="@id/btnAddUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnUpdate"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toTopOf="@id/btnRemove"
        app:layout_constraintStart_toEndOf="@id/btnRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnRemove"

        />


</androidx.constraintlayout.widget.ConstraintLayout>