<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".UpdateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/update_users"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        app:layout_constraintVertical_bias="0.01"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:textSize="20sp"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:hint="@string/first_name"
        android:background="@color/lightDark"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etSecondName"
        />

    <EditText
        android:id="@+id/etSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:textSize="20sp"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:hint="@string/second_name"
        android:background="@color/lightDark"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etAge"
        />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="20sp"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:hint="@string/age"
        android:background="@color/lightDark"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/etSecondName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/textColor"
        android:hint="@string/email"
        android:background="@color/lightDark"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <HorizontalScrollView
        android:id="@+id/svUsersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        android:layout_marginTop="5dp"
        android:background="@color/fieldColor"
        >

        <LinearLayout
            android:id="@+id/llUserList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                />

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svUsersList"
        />


</androidx.constraintlayout.widget.ConstraintLayout>